<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.woniyoon.assignment10.Activities.Main2Activity">

    <RadioGroup
        android:id="@+id/main2_radioGroup"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="@color/colorPrimary"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingLeft="10dp"
        android:paddingRight="10dp">

        <RadioButton
            android:id="@+id/main2_java_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/java"
            android:textColor="@color/text" />

        <RadioButton
            android:id="@+id/main2_sql_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/sql"
            android:textColor="@color/text" />

    </RadioGroup>


    <FrameLayout
        android:id="@+id/main2_container"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="8">

    </FrameLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:layout_weight="1.5"
        android:gravity="center_vertical"
        android:background="@color/colorPrimaryDark">

        <Button
            android:layout_weight="1"
            android:id="@+id/main2_start_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@drawable/button"
            android:text="@string/start"/>

        <Button
            android:layout_weight="1"
            android:id="@+id/main2_result_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@drawable/button"
            android:layout_marginLeft="10dp"
            android:text="@string/result" />

        <Button
            android:layout_weight="1"
            android:id="@+id/main2_history_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:background="@drawable/button"
            android:text="@string/history" />

        <Button
            android:layout_weight="1"
            android:id="@+id/main2_logout_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:background="@drawable/button"
            android:text="@string/logout" />
    </LinearLayout>


</LinearLayout>
