<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/gray99">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center_horizontal">
    <EditText
        android:id="@+id/login_username"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:paddingLeft="10dp"
        android:hint="@string/username"
        android:textColorHint="@color/text"
        android:background="@drawable/background"/>

    <EditText
        android:id="@+id/login_password"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:paddingLeft="10dp"
        android:hint="@string/password"
        android:textColorHint="@color/text"
        android:background="@drawable/background"
        android:inputType="textPassword"/>

    <Button
        android:id="@+id/login_login_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="140dp"
        android:background="@drawable/button"
        android:text="@string/login"
        android:textColor="@color/text"/>

    </LinearLayout>

</FrameLayout>